더 빠른 CDN으로 옮김

--- a/theme/spoqa.css
+++ b/theme/spoqa.css
@@ -25,70 +25,71 @@
     font-family: 'Spoqa Han Sans';
     font-weight: 700;
     src: local('Spoqa Han Sans Bold'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Bold.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Bold.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Bold.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansBold.woff2') format('woff2'),
+    
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansBold.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansBold.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Spoqa Han Sans';
     font-weight: 400;
     src: local('Spoqa Han Sans Regular'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Regular.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Regular.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Regular.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansRegular.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansRegular.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansRegular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Spoqa Han Sans';
     font-weight: 300;
     src: local('Spoqa Han Sans Light'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Light.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Light.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Light.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansLight.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansLight.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansLight.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Spoqa Han Sans';
     font-weight: 100;
     src: local('Spoqa Han Sans Thin'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Thin.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Thin.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans/Spoqa%20Han%20Sans%20Thin.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansThin.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansThin.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans/SpoqaHanSansThin.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Spoqa Han Sans JP';
     font-weight: 700;
 
     src: local('Spoqa Han Sans JP Bold'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Bold.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Bold.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Bold.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPBold.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPBold.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPBold.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Spoqa Han Sans JP';
     font-weight: 400;
     src: local('Spoqa Han Sans JP Regular'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Regular.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Regular.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Regular.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPRegular.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPRegular.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPRegular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Spoqa Han Sans JP';
     font-weight: 300;
     src: local('Spoqa Han Sans JP Light'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Light.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Light.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Light.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPLight.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPLight.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPLight.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Spoqa Han Sans JP';
     font-weight: 100;
     src: local('Spoqa Han Sans JP Thin'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Thin.woff2') format('woff2'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Thin.woff') format('woff'),
-    url('https://cdn.rawgit.com/spoqa/spoqa-han-sans/212c9818/Subset/SpoqaHanSans_JP/Spoqa%20Han%20Sans%20JP%20Thin.ttf') format('truetype');
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPThin.woff2') format('woff2'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPThin.woff') format('woff'),
+    url('https://cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.1/Subset/SpoqaHanSans_JP/SpoqaHanSansJPThin.ttf') format('truetype');
 }
