나는 메터리얼로 간다!

--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,6 @@
 @import (inline)'../theme/spoqa.css';
 @import (inline)'../theme/bootstrap.css';
+@import (inline)'../theme/vue-material.css';
 @import (inline)'../theme/font-awesome.css';
 
 body {
