버튼 안 스피너 스타일 지정

--- a/less/main.less
+++ b/less/main.less
@@ -51,6 +51,13 @@
     }
   }
 }
+.md-button {
+  &>.md-spinner {
+    width: 25px !important;
+    height: 25px !important;
+    margin-bottom: -5px;
+  }
+}
 
 #card-login {
   width: 500px;
